Made bar w/ js only.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="bar">
+    <!-- <div class="bar">
         <div id="titleCopy" class="title-copy"></div>
-        <div id="progressBar" class="progress"><!--Progress bar--></div>
-    </div>
+        <div id="progressBar" class="progress"></div>
+    </div> -->
     <header class="intro">
         <article id="details" class="details">
             <h1 id="title" class="title">Gravity Falls Transcripts</h1>
@@ -300,5 +300,6 @@
     
 
     <script src="js/main.js"></script>
+    <!-- <script src="js/old.js"></script> -->
     </body>
 </html>
