SCROLL WORKS but you still need to offset it.

--- a/index.html
+++ b/index.html
@@ -13,18 +13,29 @@
         <div id="titleCopy" class="title-copy"></div>
         <div id="progressBar" class="progress"></div>
     </div> -->
+    
     <header class="intro">
-        <article id="details" class="details">
+        <article class="details">
             <h1 id="title" class="title">Gravity Falls Transcripts</h1>
-            <h2 id="subtitle" class="subtitle">S02E11, Not What He Seems</h2>
+            <h2 class="subtitle">S02E11, Not What He Seems</h2>
         </article>
         <article class="summary">
             <p>The following is an excerpt from the ending of the truly iconic S02E11 of Gravity Falls. Hope y'all have some tissues because I'm literally so emotional right now, and it's literally just a transcript.</p>
             <p>You can see the source of the transcript <a href="https://gravityfalls.fandom.com/wiki/Not_What_He_Seems/Transcript">here</a>.</p>
         </article>
+        <nav id="nav" class="nav">
+            <p>Jump to:</p>
+            <ul>
+                <li><a class="scroll-to" href="#scene1">Scene 1</a></li>
+                <li><a class="scroll-to" href="#scene2">Scene 2</a></li>
+                <li><a class="scroll-to" href="#scene3">Scene 3</a></li>
+                <li><a class="scroll-to" href="#scene4">Scene 4</a></li>
+            </ul>
+        </nav>
     </header>
     <section class="container">
         <article class="chunk">
+            <h2 id="scene1" class="scene-title">Scene 1</h2>
             <p>We open with a shot of Stan's feet as he races back to the Shack. We cut to Soos, Dipper, & Mabel heading down in the elevator, then cut back to Stan, checking his watch.</p>
         </article>
         <article class="chunk">
@@ -34,6 +45,7 @@
             <p class="quote">Aah!</p>
         </article> 
         <article class="chunk">
+            <h2 id="scene2" class="scene-title">Scene 2</h2>
             <p>Cut to Soos, Dipper & Mabel entering Stan's lab. All gasp.</p>
         </article>
         <article class="chunk">
@@ -103,6 +115,7 @@
             <p class="scene">DIPPER is about to hit the button, but he stops at a sudden interruption.</p>
         </article>
         <article class="chunk">
+            <h2 id="scene3" class="scene-title">Scene 3</h2>
             <h1 class="speaker">Stan</h1>
             <p class="quote">DON'T TOUCH THAT BUTTON!! Dipper, just back away.</p>
             <p class="scene">Stan appears suddenly, standing in the doorway, panting.</p>
@@ -260,6 +273,7 @@
             <p class="quote">AAA-!</p>
         </article>
         <article class="chunk">
+            <h2 id="scene4" class="scene-title">Scene 4</h2>
             <p>A flash of blinding light engulfs all of Gravity Falls. Then, everything comes down to earth. The portal, now a mess of tangled wires and metal, glows bright blue. A figure emerges from the portal. The blue light fades behind him. He walks forward, placing a six-fingered hand on the cover of the first journal, then picks it up and places it into the inside pocket of a long, dark coat.</p>    
         </article>
         <article class="chunk">
